--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./src/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/assets/favicon.ico"
+      type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contador creado  con React</title>
+    <title>Contador creado con React</title>
   </head>
   <body>
     <div id="root"></div>
